@@ -65,7 +65,7 @@ public class SlopQueryNode extends QueryNodeImpl implements FieldableNode {
   }
 
   private CharSequence getValueString() {
-    Float f = new Float(this.value);
+    Float f = Float.valueOf(this.value);
     if (f == f.longValue())
       return "" + f.longValue();
     else
