@@ -118,10 +118,10 @@ public class GeoHashDistanceFilter extends DistanceFilter {
   /** Returns a hash code value for this object.*/
   @Override
   public int hashCode() {
-    int h = new Double(distance).hashCode();
+    int h = Double.valueOf(distance).hashCode();
     h ^= startingFilter.hashCode();
-    h ^= new Double(lat).hashCode();
-    h ^= new Double(lng).hashCode();
+    h ^= Double.valueOf(lat).hashCode();
+    h ^= Double.valueOf(lng).hashCode();
     h ^= geoHashField.hashCode();
     
     return h;
