@@ -222,7 +222,7 @@ public class MultiSearcher extends Searcher {
           // iterate over the score docs and change their fields value
           for (int j2 = 0; j2 < docs.scoreDocs.length; j2++) {
             FieldDoc fd = (FieldDoc) docs.scoreDocs[j2];
-            fd.fields[j] = new Integer(((Integer) fd.fields[j]).intValue() + starts[i]);
+            fd.fields[j] = Integer.valueOf(((Integer) fd.fields[j]).intValue() + starts[i]);
           }
           break;
         }
@@ -321,7 +321,7 @@ public class MultiSearcher extends Searcher {
 
     HashMap dfMap = new HashMap();
     for(int i=0; i<allTermsArray.length; i++) {
-      dfMap.put(allTermsArray[i], new Integer(aggregatedDfs[i]));
+      dfMap.put(allTermsArray[i], Integer.valueOf(aggregatedDfs[i]));
     }
 
     // step4
