@@ -77,7 +77,7 @@ implements SortComparatorSource {
    * Returns an object which, when sorted according to natural order,
    * will order the Term values in the correct order.
    * <p>For example, if the Terms contained integer values, this method
-   * would return <code>new Integer(termtext)</code>.  Note that this
+   * would return <code>Integer.valueOf(termtext)</code>.  Note that this
    * might not always be the most efficient implementation - for this
    * particular example, a better implementation might be to make a
    * ScoreDocLookupComparator that uses an internal lookup table of int.
